--- a/server/public/index.html
+++ b/server/public/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="/css/chartist.css">
   <link rel="stylesheet" href="/css/main.min.css">
   <link rel="stylesheet" href="/styles.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1 user-scalable=no">
   <style>
     @import url('https://fonts.googleapis.com/css?family=Comfortaa|Varela+Round|Wallpoet&display=swap');
   </style>
